# codemind

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: approvals.rs  git.rs  messages.rs  mod.rs  projects.rs  sessions.rs  shell.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: agents.rs  cli.rs  diffs.rs  mod.rs  projects.rs
src/application/use-cases/: messageWorkflow.ts  sessionQueries.ts
src/domain/logic/: diffAnnotations.test.ts  diffAnnotations.ts  ruleContext.ts  sessionTitle.ts
src/domain/models/: agent.ts  approval.ts  extension.ts  git.ts  project.ts  providerInstall.ts  session.ts  shell.ts  vscodeCompatibility.ts
src/domain/ports/: CodemindRepository.ts
src/infrastructure/tauri/: codemindRepository.ts
src/stores/: workspaceStore.ts
src/ui/components/badge/: Badge.tsx
src/ui/components/button/: Button.tsx
src/ui/components/panel/: Panel.tsx
src/ui/features/approvals/: ApprovalQueue.tsx
src/ui/features/chat/: ChatPanel.tsx
src/ui/features/compatibility/: OpenVsxSidebar.tsx
src/ui/features/editor/: CodeViewer.tsx  editorLanguageRegistry.ts  monacoEnvironment.ts  textmateHighlighting.ts
src/ui/features/explorer/: FileExplorer.tsx
src/ui/features/git/: GitDiffPreview.tsx  GitSidebar.tsx
src/ui/features/search/: QuickOpenDialog.tsx
src/ui/features/sessions/: SessionSidebar.tsx
src/ui/layouts/: CodemindWorkspace.tsx
(+2 files in other folders)
